--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ body {
 
 
       button {
-        padding: 10px 16px;
+        padding: 0;
         border-radius: 10px;
-        border: 1px solid #ddd;
-        background: #fff;
+        border: 1px solid #eae9e400;
+        background: #e97a0c84;
         cursor: pointer;
       }
 
